--- a/src/plugins/i18n/hi/lang.json
+++ b/src/plugins/i18n/hi/lang.json
@@ -1,1 +1,49 @@
-{}
+{
+  "common": {
+    "home": "होम",
+    "options": "विकल्प",
+    "color": "रंग",
+    "bin": "बिन",
+    "label": "लेबल",
+    "labels": "लेबल",
+    "settings": "सेटिंग्स",
+    "language": "भाषा",
+    "theme": "थीम",
+    "signout": "साइन आउट",
+    "memorized": "याद किया"
+  },
+  "home": {
+    "set": {
+      "add": "फ़्लैशकार्ड सेट जोड़ें"
+    }
+  },
+  "add": {
+    "set": {
+      "notitle": "अनामांकित सेट"
+    },
+    "card":"कार्ड जोड़ें",
+    "move-to-bin":"बिन ले जाएँ"
+  },
+  "profile": {
+    "member": "कब से सदस्ये",
+    "label" : {
+      "title":"आपके लेबल",
+      "create":"नया लेबल बनाएं",
+      "subtitle":"नया लेबल बनाएं या चयन करके एडिट करे"
+    }
+  },
+  "empty": {
+    "home": {
+      "title": "अपने फ्लैशकार्ड संग्रह में आपका स्वागत है!",
+      "subtitle": "फ्लैशकार्ड सेट जोड़ें और वो यहां दिखाई देंगे।"
+    },
+    "add": {
+      "title": "यहां नए फ्लैशकार्ड जोड़ें",
+      "subtitle": "वर्तमान सेट के लिए फ़्लैशकार्ड बनाने के लिए नीचे दिए गए बटन का उपयोग करें और वे यहां दिखाई देंगे।"
+    },
+    "bin": {
+      "title": "फ्लैशकार्ड कचरा बिन",
+      "subtitle": "हटाए गए फ्लैशकार्ड सेट यहां दिखाई देंगे। आप उन्हें हटा या वापिस भेज सकते है।"
+    }
+  }
+}
