info page created

--- a/src/plugins/i18n/en/lang.json
+++ b/src/plugins/i18n/en/lang.json
@@ -1,6 +1,8 @@
 {
   "common": {
     "home": "Home",
+    "close": "Close",
+    "about": "About",
     "options": "Options",
     "color": "Color",
     "bin": "Bin",
