--- a/src/plugins/i18n/hi/lang.json
+++ b/src/plugins/i18n/hi/lang.json
@@ -1,6 +1,8 @@
 {
   "common": {
     "home": "होम",
+    "close": "बंद करे",
+    "about": "बारे में",
     "options": "विकल्प",
     "color": "रंग",
     "bin": "बिन",
