--- a/src/plugins/i18n/hi/lang.json
+++ b/src/plugins/i18n/hi/lang.json
@@ -23,15 +23,16 @@
     "set": {
       "notitle": "अनामांकित सेट"
     },
-    "card":"कार्ड जोड़ें",
-    "move-to-bin":"बिन ले जाएँ"
+    "card": "कार्ड जोड़ें",
+    "move-to-bin": "बिन ले जाएँ"
   },
   "profile": {
     "member": "कब से सदस्ये",
-    "label" : {
-      "title":"आपके लेबल",
-      "create":"नया लेबल बनाएं",
-      "subtitle":"नया लेबल बनाएं या चयन करके एडिट करे"
+    "login": "पिछली लॉगइन",
+    "label": {
+      "title": "आपके लेबल",
+      "create": "नया लेबल बनाएं",
+      "subtitle": "नया लेबल बनाएं या चयन करके एडिट करे"
     }
   },
   "empty": {
