--- a/src/plugins/i18n/hi/lang.json
+++ b/src/plugins/i18n/hi/lang.json
@@ -12,6 +12,7 @@
     "settings": "सेटिंग्स",
     "language": "भाषा",
     "theme": "थीम",
+    "restore": "वापिस जोड़ें",
     "signout": "साइन आउट",
     "learned": "सीखा",
     "favourite": "पसंदीदा",
@@ -27,6 +28,7 @@
       "notitle": "अनामांकित सेट"
     },
     "card": "कार्ड जोड़ें",
+    "card-delete": "कार्ड हटाया गया",
     "move-to-bin": "बिन ले जाएँ",
     "mark-as-fav": "पसंदीदा चिह्नित करें"
   },
