--- a/src/plugins/i18n/hi/lang.json
+++ b/src/plugins/i18n/hi/lang.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "flashcards": "फ़्लैशकार्ड्स",
     "home": "होम",
     "close": "बंद करे",
     "about": "बारे में",
@@ -15,6 +16,9 @@
     "restore": "वापिस जोड़ें",
     "signout": "साइन आउट",
     "learned": "सीखा",
+    "done": "खत्म",
+    "browse": "देखे",
+    "review": "दोहराये",
     "favourite": "पसंदीदा",
     "memorized": "याद किया"
   },
@@ -57,6 +61,50 @@
     "bin": {
       "title": "फ्लैशकार्ड कचरा बिन",
       "subtitle": "हटाए गए फ्लैशकार्ड सेट यहां दिखाई देंगे। आप उन्हें हटा या वापिस भेज सकते है।"
+    }
+  },
+  "settings": {
+    "language": {
+      "title": "भाषा",
+      "desc": "भाषा बदले"
+    },
+    "theme": {
+      "title": "थीम",
+      "desc": "थीम बदले"
+    },
+    "favourite": {
+      "title": "पसंदीदा",
+      "desc": "पसंदीदा कार्ड-सेट सबसे ऊपर रखे"
+    },
+    "card-set": {
+      "title": "कार्ड-सेट क्रम",
+      "desc": "कार्ड-सेट सूची का क्रम चुनें"
+    },
+    "order-items": {
+      "al": "वर्ण-माला के क्रम से",
+      "nf": "पहले नया",
+      "of": "पहले पुराना"
+    }
+  },
+  "info": {
+    "tagline": {
+      "title": "फ़्लैशकार्ड्स",
+      "desc": "सीखे और याद करें"
+    },
+    "author": {
+      "title": "निर्माता",
+      "desc": "अंकित कुमार पंडित"
+    },
+    "version": {
+      "title": "वर्शन"
+    },
+    "share": {
+      "title": "शेयर",
+      "desc": "ऐप को शेयर करें"
+    },
+    "rate": {
+      "title": "रेट",
+      "desc": "प्ले स्टोर पर रेट करे"
     }
   }
 }
